Add useTest and useExtra

--- a/CuratedToModel.ipynb
+++ b/CuratedToModel.ipynb
@@ -31,6 +31,7 @@
     "weight_decay=0.01\n",
     "\n",
     "useExtra = True                               # Use extra set not used in the competition\n",
+    "useTest = False \n",
     "phase = \"full\"                                # Search all parameters\n",
     "\n",
     "modelOut = 'caush/Clickbait1'"
@@ -43,14 +44,7 @@
    "outputs": [],
    "source": [
     "modelIn = \"caush/Clickbait1\"\n",
-    "                                              # \"cmarkea/distilcamembert-base-sentiment\"\n",
-    "                                              # \"cmarkea/distilcamembert-base\" (accuracy=0,69)\n",
-    "                                              # \"camembert-base\"\n",
-    "                                              # \"microsoft/Multilingual-MiniLM-L12-H384\" (accuracy=0,64)\n",
-    "                                              # \"nlptown/bert-base-multilingual-uncased-sentiment\"\n",
-    "                                              # \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
-    "                                              # \"bert-base-uncased\"\n",
-    "                                              # \"bert-base-cased\"\n",
+    "\n",
     "problem_type =  \"regression\"                  # Possible values: \"regression\", \"single_label_classification\", \"multi_label_classification\"\n",
     "num_labels = 1\n",
     "\n",
@@ -703,15 +697,18 @@
    ],
    "source": [
     "# Filter the data\n",
+    "# curated=curated.filter(lambda example: example['id'].startswith('8')\n",
     "# fromDataset = C:Chalenge dataset, T:Test dataset, S:Supplement\n",
     "if (not useExtra) & (not useTest):\n",
-    "    curated=curated.filter(lambda example: example['id'].startswith('8'))\n",
+    "    curated=curated.filter(lambda example: example['fromDataset']=='C')\n",
     "elif (not useExtra) & useTest:\n",
-    "    curated=curated.filter(lambda example: example['id'].startswith('8'))\n",
+    "    curated=curated.filter(lambda example: example['fromDataset']=='C')\n",
+    "    curatedTest = curated.filter(lambda example: example['fromDataset']=='T')\n",
     "elif useExtra & (not useTest):\n",
-    "    curated=curated.filter(lambda example: example['id'].startswith('8'))\n",
+    "    curated=curated.filter(lambda example: example['fromDataset'] !='T')\n",
     "else:\n",
-    "    curated=curated.filter(lambda example: example['id'].startswith('8'))"
+    "    curated=curated.filter(lambda example: example['fromDataset'] !='T')\n",
+    "    curatedTest = curated.filter(lambda example: example['fromDataset']=='T')"
    ]
   },
   {
@@ -729,7 +726,9 @@
    ],
    "source": [
     "\n",
-    "curated=curated.filter(lambda example: len(example['postText'])>0)"
+    "curated=curated.filter(lambda example: len(example['postText'])>0)\n",
+    "if useTest:\n",
+    "    curatedTest=curatedTest.filter(lambda example: len(example['postText'])>0)"
    ]
   },
   {
@@ -857,7 +856,9 @@
     }
    ],
    "source": [
-    "tokenized_curated = curated.map(tokenize) #, batched=True)"
+    "tokenized_curated = curated.map(tokenize) #, batched=True)\n",
+    "if useTest:\n",
+    "    tokenized_curatedTest = curatedTest.map(tokenize) #, batched=True)"
    ]
   },
   {
@@ -1130,7 +1131,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_curated2 = tokenized_curated.train_test_split(splitFactor) # 0.2"
+    "if useTest:\n",
+    "    tokenized_curated2 = tokenized_curated\n",
+    "    tokenized_curatedTest2 = tokenized_curatedTest\n",
+    "else\n",
+    "    tokenized_curated2 = tokenized_curated.train_test_split(splitFactor) # 0.2"
    ]
   },
   {
@@ -1380,7 +1385,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_curated3 = tokenized_curated2.remove_columns(removeColumns)"
+    "tokenized_curated3 = tokenized_curated2.remove_columns(removeColumns)\n",
+    "if useTest:\n",
+    "    tokenized_curatedTest3 = tokenized_curatedTest2.remove_columns(removeColumns)"
    ]
   },
   {
@@ -1389,7 +1396,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_curated4 = tokenized_curated3"
+    "tokenized_curated4 = tokenized_curated3\n",
+    "if useTest:\n",
+    "    tokenized_curatedTest4 = tokenized_curatedTest3"
    ]
   },
   {
@@ -1419,6 +1428,20 @@
    ],
    "source": [
     "tokenized_curated4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not useTest:\n",
+    "    train_dataset=tokenized_curated4[\"train\"]\n",
+    "    eval_dataset=tokenized_curated4[\"test\"]\n",
+    "else\n",
+    "    train_dataset=tokenized_curated4[\"train\"]\n",
+    "    eval_dataset=tokenized_curatedTest4[\"train\"]"
    ]
   },
   {
@@ -1483,8 +1506,8 @@
     "\n",
     "trainer = Trainer(model,\n",
     "                  training_args,\n",
-    "                  train_dataset=tokenized_curated4[\"train\"],\n",
-    "                  eval_dataset=tokenized_curated4[\"test\"],\n",
+    "                  train_dataset=train_dataset,\n",
+    "                  eval_dataset=eval_dataset,\n",
     "                  data_collator=data_collator,\n",
     "                  tokenizer=tokenizer,\n",
     "                  callbacks = [EarlyStoppingCallback(early_stopping_patience=10)],\n",
