--- a/CuratedToModel.ipynb
+++ b/CuratedToModel.ipynb
@@ -135,10 +135,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "modelIn = \"caush/Clickbait3\"\n",
     "\n",
@@ -164,6 +162,38 @@
     "phase = \"head\"                                # Search only head (two last levels) parameters\n",
     "\n",
     "modelOut = 'caush/Clickbait5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelIn = \"caush/Clickbait4\"\n",
+    "\n",
+    "problem_type =  \"regression\"                  # Possible values: \"regression\", \"single_label_classification\", \"multi_label_classification\"\n",
+    "num_labels = 1\n",
+    "\n",
+    "dataCuratedPath = \"Data/Clickbait17/Curated/\" # Columns separated by \";\" to avoid numeric formats nightmare:\n",
+    "                                              #    'postText', 'targetTitle', 'targetDescription', 'id', 'truthMean\n",
+    "inputColumn = 'postText'\n",
+    "actualOutput = 'truthMean'\n",
+    "computedOutput = \"labelC\"\n",
+    "\n",
+    "removeColumns = ['postText', 'postMedia', 'targetTitle', 'id', 'truthMean', 'fromDataset']\n",
+    "\n",
+    "push_to_hub = True                            # Push to Huggingface\n",
+    "\n",
+    "splitFactor = 0.2                             # Part of the data for the tests\n",
+    "learning_rate = 5e-5\n",
+    "weight_decay=0.01\n",
+    "\n",
+    "useExtra = False                               # Use extra set not used in the competition\n",
+    "useTest = True                               # Use the  test Data NO NO NO\n",
+    "phase = \"head\"                                # Search only head (two last levels) parameters\n",
+    "\n",
+    "modelOut = 'caush/Clickbait4'"
    ]
   },
   {
@@ -887,7 +917,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x18fd5659e50>]"
+       "[<matplotlib.lines.Line2D at 0x25485fa0250>]"
       ]
      },
      "execution_count": 15,
@@ -960,7 +990,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading cached processed dataset at Data/Clickbait17/Curated\\cache-516e3d00155c95cb.arrow\n"
+      "Loading cached processed dataset at Data/Clickbait17/Curated\\cache-d9c02b817361b2df.arrow\n"
      ]
     }
    ],
@@ -977,7 +1007,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading cached processed dataset at Data/Clickbait17/Curated\\cache-fe0f85361c1958a4.arrow\n"
+      "Loading cached processed dataset at Data/Clickbait17/Curated\\cache-754ae9986e79ef85.arrow\n"
      ]
     }
    ],
@@ -1465,307 +1495,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "***** Running training *****\n",
-      "  Num examples = 19484\n",
-      "  Num Epochs = 4\n",
-      "  Instantaneous batch size per device = 16\n",
-      "  Total train batch size (w. parallel, distributed & accumulation) = 16\n",
-      "  Gradient Accumulation steps = 1\n",
-      "  Total optimization steps = 4872\n",
-      "  1%|          | 49/4872 [00:03<02:19, 34.61it/s] ***** Running Evaluation *****\n",
-      "  Num examples = 18913\n",
-      "  Batch size = 16\n",
-      "                                                 \n",
-      "  1%|          | 50/4872 [00:27<02:19, 34.61it/s]  Saving model checkpoint to caush/Clickbait5\\checkpoint-50\n",
-      "Configuration saved in caush/Clickbait5\\checkpoint-50\\config.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.025798991322517395, 'eval_runtime': 23.7218, 'eval_samples_per_second': 797.282, 'eval_steps_per_second': 49.87, 'epoch': 0.04}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Model weights saved in caush/Clickbait5\\checkpoint-50\\pytorch_model.bin\n",
-      "tokenizer config file saved in caush/Clickbait5\\checkpoint-50\\tokenizer_config.json\n",
-      "Special tokens file saved in caush/Clickbait5\\checkpoint-50\\special_tokens_map.json\n",
-      "  2%|▏         | 100/4872 [00:30<04:07, 19.29it/s] ***** Running Evaluation *****\n",
-      "  Num examples = 18913\n",
-      "  Batch size = 16\n",
-      "                                                  \n",
-      "  2%|▏         | 100/4872 [00:53<04:07, 19.29it/s] Saving model checkpoint to caush/Clickbait5\\checkpoint-100\n",
-      "Configuration saved in caush/Clickbait5\\checkpoint-100\\config.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.02685537189245224, 'eval_runtime': 22.5282, 'eval_samples_per_second': 839.525, 'eval_steps_per_second': 52.512, 'epoch': 0.08}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Model weights saved in caush/Clickbait5\\checkpoint-100\\pytorch_model.bin\n",
-      "tokenizer config file saved in caush/Clickbait5\\checkpoint-100\\tokenizer_config.json\n",
-      "Special tokens file saved in caush/Clickbait5\\checkpoint-100\\special_tokens_map.json\n",
-      "Deleting older checkpoint [caush\\Clickbait5\\checkpoint-150] due to args.save_total_limit\n",
-      "  3%|▎         | 146/4872 [00:57<04:48, 16.41it/s]  ***** Running Evaluation *****\n",
-      "  Num examples = 18913\n",
-      "  Batch size = 16\n",
-      "                                                  \n",
-      "  3%|▎         | 150/4872 [01:19<04:47, 16.41it/s] Saving model checkpoint to caush/Clickbait5\\checkpoint-150\n",
-      "Configuration saved in caush/Clickbait5\\checkpoint-150\\config.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.025893209502100945, 'eval_runtime': 22.4497, 'eval_samples_per_second': 842.459, 'eval_steps_per_second': 52.695, 'epoch': 0.12}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Model weights saved in caush/Clickbait5\\checkpoint-150\\pytorch_model.bin\n",
-      "tokenizer config file saved in caush/Clickbait5\\checkpoint-150\\tokenizer_config.json\n",
-      "Special tokens file saved in caush/Clickbait5\\checkpoint-150\\special_tokens_map.json\n",
-      "Deleting older checkpoint [caush\\Clickbait5\\checkpoint-200] due to args.save_total_limit\n",
-      "  4%|▍         | 200/4872 [01:23<04:02, 19.30it/s]  ***** Running Evaluation *****\n",
-      "  Num examples = 18913\n",
-      "  Batch size = 16\n",
-      "                                                  \n",
-      "  4%|▍         | 200/4872 [01:46<04:02, 19.30it/s] Saving model checkpoint to caush/Clickbait5\\checkpoint-200\n",
-      "Configuration saved in caush/Clickbait5\\checkpoint-200\\config.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.02595103159546852, 'eval_runtime': 22.5715, 'eval_samples_per_second': 837.914, 'eval_steps_per_second': 52.411, 'epoch': 0.16}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Model weights saved in caush/Clickbait5\\checkpoint-200\\pytorch_model.bin\n",
-      "tokenizer config file saved in caush/Clickbait5\\checkpoint-200\\tokenizer_config.json\n",
-      "Special tokens file saved in caush/Clickbait5\\checkpoint-200\\special_tokens_map.json\n",
-      "Deleting older checkpoint [caush\\Clickbait5\\checkpoint-250] due to args.save_total_limit\n",
-      "  5%|▌         | 249/4872 [01:49<04:01, 19.11it/s]  ***** Running Evaluation *****\n",
-      "  Num examples = 18913\n",
-      "  Batch size = 16\n",
-      "                                                  \n",
-      "  5%|▌         | 250/4872 [02:12<04:01, 19.11it/s] Saving model checkpoint to caush/Clickbait5\\checkpoint-250\n",
-      "Configuration saved in caush/Clickbait5\\checkpoint-250\\config.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.026735233142971992, 'eval_runtime': 22.3748, 'eval_samples_per_second': 845.282, 'eval_steps_per_second': 52.872, 'epoch': 0.21}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Model weights saved in caush/Clickbait5\\checkpoint-250\\pytorch_model.bin\n",
-      "tokenizer config file saved in caush/Clickbait5\\checkpoint-250\\tokenizer_config.json\n",
-      "Special tokens file saved in caush/Clickbait5\\checkpoint-250\\special_tokens_map.json\n",
-      "Deleting older checkpoint [caush\\Clickbait5\\checkpoint-300] due to args.save_total_limit\n",
-      "  6%|▌         | 297/4872 [02:16<04:32, 16.81it/s]  ***** Running Evaluation *****\n",
-      "  Num examples = 18913\n",
-      "  Batch size = 16\n",
-      "                                                  \n",
-      "  6%|▌         | 300/4872 [02:38<04:32, 16.81it/s] Saving model checkpoint to caush/Clickbait5\\checkpoint-300\n",
-      "Configuration saved in caush/Clickbait5\\checkpoint-300\\config.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.02760150656104088, 'eval_runtime': 22.3792, 'eval_samples_per_second': 845.114, 'eval_steps_per_second': 52.861, 'epoch': 0.25}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Model weights saved in caush/Clickbait5\\checkpoint-300\\pytorch_model.bin\n",
-      "tokenizer config file saved in caush/Clickbait5\\checkpoint-300\\tokenizer_config.json\n",
-      "Special tokens file saved in caush/Clickbait5\\checkpoint-300\\special_tokens_map.json\n",
-      "Deleting older checkpoint [caush\\Clickbait5\\checkpoint-350] due to args.save_total_limit\n",
-      "  7%|▋         | 349/4872 [02:42<04:24, 17.10it/s]  ***** Running Evaluation *****\n",
-      "  Num examples = 18913\n",
-      "  Batch size = 16\n",
-      "                                                  \n",
-      "  7%|▋         | 350/4872 [03:05<04:24, 17.10it/s] Saving model checkpoint to caush/Clickbait5\\checkpoint-350\n",
-      "Configuration saved in caush/Clickbait5\\checkpoint-350\\config.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.0283874049782753, 'eval_runtime': 22.3762, 'eval_samples_per_second': 845.229, 'eval_steps_per_second': 52.869, 'epoch': 0.29}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Model weights saved in caush/Clickbait5\\checkpoint-350\\pytorch_model.bin\n",
-      "tokenizer config file saved in caush/Clickbait5\\checkpoint-350\\tokenizer_config.json\n",
-      "Special tokens file saved in caush/Clickbait5\\checkpoint-350\\special_tokens_map.json\n",
-      "Deleting older checkpoint [caush\\Clickbait5\\checkpoint-400] due to args.save_total_limit\n",
-      "  8%|▊         | 398/4872 [03:08<03:38, 20.46it/s]  ***** Running Evaluation *****\n",
-      "  Num examples = 18913\n",
-      "  Batch size = 16\n",
-      "                                                  \n",
-      "  8%|▊         | 400/4872 [03:31<03:38, 20.46it/s] Saving model checkpoint to caush/Clickbait5\\checkpoint-400\n",
-      "Configuration saved in caush/Clickbait5\\checkpoint-400\\config.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.026985494419932365, 'eval_runtime': 22.3306, 'eval_samples_per_second': 846.956, 'eval_steps_per_second': 52.977, 'epoch': 0.33}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Model weights saved in caush/Clickbait5\\checkpoint-400\\pytorch_model.bin\n",
-      "tokenizer config file saved in caush/Clickbait5\\checkpoint-400\\tokenizer_config.json\n",
-      "Special tokens file saved in caush/Clickbait5\\checkpoint-400\\special_tokens_map.json\n",
-      "Deleting older checkpoint [caush\\Clickbait5\\checkpoint-450] due to args.save_total_limit\n",
-      "  9%|▉         | 447/4872 [03:35<03:52, 19.05it/s]  ***** Running Evaluation *****\n",
-      "  Num examples = 18913\n",
-      "  Batch size = 16\n",
-      "                                                  \n",
-      "  9%|▉         | 450/4872 [03:57<03:52, 19.05it/s] Saving model checkpoint to caush/Clickbait5\\checkpoint-450\n",
-      "Configuration saved in caush/Clickbait5\\checkpoint-450\\config.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.02692081406712532, 'eval_runtime': 22.385, 'eval_samples_per_second': 844.896, 'eval_steps_per_second': 52.848, 'epoch': 0.37}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Model weights saved in caush/Clickbait5\\checkpoint-450\\pytorch_model.bin\n",
-      "tokenizer config file saved in caush/Clickbait5\\checkpoint-450\\tokenizer_config.json\n",
-      "Special tokens file saved in caush/Clickbait5\\checkpoint-450\\special_tokens_map.json\n",
-      "Deleting older checkpoint [caush\\Clickbait5\\checkpoint-500] due to args.save_total_limit\n",
-      " 10%|█         | 500/4872 [04:01<03:08, 23.25it/s]  ***** Running Evaluation *****\n",
-      "  Num examples = 18913\n",
-      "  Batch size = 16\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.0195, 'learning_rate': 4.486863711001642e-05, 'epoch': 0.41}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                  \n",
-      " 10%|█         | 500/4872 [04:23<03:08, 23.25it/s] Saving model checkpoint to caush/Clickbait5\\checkpoint-500\n",
-      "Configuration saved in caush/Clickbait5\\checkpoint-500\\config.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.026009973138570786, 'eval_runtime': 22.2401, 'eval_samples_per_second': 850.401, 'eval_steps_per_second': 53.192, 'epoch': 0.41}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Model weights saved in caush/Clickbait5\\checkpoint-500\\pytorch_model.bin\n",
-      "tokenizer config file saved in caush/Clickbait5\\checkpoint-500\\tokenizer_config.json\n",
-      "Special tokens file saved in caush/Clickbait5\\checkpoint-500\\special_tokens_map.json\n",
-      "Deleting older checkpoint [caush\\Clickbait5\\checkpoint-550] due to args.save_total_limit\n",
-      " 11%|█▏        | 550/4872 [04:27<03:09, 22.79it/s]  ***** Running Evaluation *****\n",
-      "  Num examples = 18913\n",
-      "  Batch size = 16\n",
-      "                                                  \n",
-      " 11%|█▏        | 550/4872 [04:50<03:09, 22.79it/s] Saving model checkpoint to caush/Clickbait5\\checkpoint-550\n",
-      "Configuration saved in caush/Clickbait5\\checkpoint-550\\config.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.028400788083672523, 'eval_runtime': 22.4511, 'eval_samples_per_second': 842.409, 'eval_steps_per_second': 52.692, 'epoch': 0.45}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Model weights saved in caush/Clickbait5\\checkpoint-550\\pytorch_model.bin\n",
-      "tokenizer config file saved in caush/Clickbait5\\checkpoint-550\\tokenizer_config.json\n",
-      "Special tokens file saved in caush/Clickbait5\\checkpoint-550\\special_tokens_map.json\n",
-      "Deleting older checkpoint [caush\\Clickbait5\\checkpoint-100] due to args.save_total_limit\n",
-      "\n",
-      "\n",
-      "Training completed. Do not forget to share your model on huggingface.co/models =)\n",
-      "\n",
-      "\n",
-      "Loading best model from caush/Clickbait5\\checkpoint-50 (score: 0.025798991322517395).\n",
-      " 11%|█▏        | 550/4872 [04:53<38:26,  1.87it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'train_runtime': 293.5295, 'train_samples_per_second': 265.513, 'train_steps_per_second': 16.598, 'train_loss': 0.019564375443892047, 'epoch': 0.45}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if (modelIn != modelOut):\n",
     "    trainer.train()"
@@ -1785,17 +1515,16 @@
       "***** Running Evaluation *****\n",
       "  Num examples = 18913\n",
       "  Batch size = 16\n",
-      "100%|██████████| 1183/1183 [00:22<00:00, 52.46it/s]\n"
+      "100%|██████████| 1183/1183 [00:22<00:00, 52.62it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'eval_loss': 0.025798991322517395,\n",
-       " 'eval_runtime': 22.584,\n",
-       " 'eval_samples_per_second': 837.453,\n",
-       " 'eval_steps_per_second': 52.382,\n",
-       " 'epoch': 0.45}"
+       "{'eval_loss': 0.026082398369908333,\n",
+       " 'eval_runtime': 27.7075,\n",
+       " 'eval_samples_per_second': 682.595,\n",
+       " 'eval_steps_per_second': 42.696}"
       ]
      },
      "execution_count": 33,
